<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Backg</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Calibre_Library">Calibre Library</string>
    <string name="EBooks">EBooks</string>
    <string name="Membership">Membership</string>
    <string name="Login">Login</string>
    <string name="About_Us">About Us</string>
    <string name="Comics">Comics</string>
    <string name="Health">Health</string>
    <string name="Religion">Religion</string>
    <string name="Fiction">Fiction</string>
    <string name="Current_Affairs">Current Affairs</string>
    <string name="Add_to_Q">Add to Q</string>
    <string name="Register">Register</string>
    <string name="bank_prompt">Choose a Bank</string>
     <string-array name="bank_array">
        <item>HDFC</item>
        <item>SBI</item>
        <item>ICICI</item>
        
    </string-array>
</resources>
