
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/download"
    android:contentDescription="@string/hello_world"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:textAlignment="center"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/images1"
        android:text="@string/Comics"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Calibre_Library"
        android:text="@string/Calibre_Library"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/brown"
        android:textSize="@dimen/font_size1"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:background="@drawable/images1"
        android:text="@string/Health"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:background="@drawable/images1"
        android:text="@string/Religion"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:background="@drawable/images1"
        android:text="@string/Fiction"
        android:textSize="@dimen/font_size" />
    
    <Button
        android:id="@+id/button5"
        android:layout_width="300sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4"
        android:background="@drawable/images1"
        android:text="@string/Current_Affairs"
        android:textSize="@dimen/font_size" />
    

  </RelativeLayout>  
